<resources>
    <string name="app_name">Hero Sorveteria</string>
    <string name="title_activity_menu_lateral">MenuLateral</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_CalculadoraTroco">Calculadora de troco</string>
    <string name="menu_HistoricoVendas">Histórico Vendas</string>
    <string name="menu_ContasPagar">Contas a pagar</string>
    <string name="menu_ListadeClientes">Lista de Clientes</string>
    <string name="menu_CadatroProdutos">Cadastro de Produtos</string>
    <string name="menu_Configuracao">Configurações</string>
    <string name="menu_EntrarContato">Entrar em contato</string>
    <string name="menu_ListaFornecedores">Lista de Fornecedores</string>
    <string name="menu_ControleEstoque">Controle de estoque</string>
    <string name="menu_Sair">Sair</string>
    <string name="menu">Menu</string>


    <string name="header_nome">Name</string>
    <string name="header_cargo">Cargo</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>