<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calculadoraPreco"
            android:icon="@drawable/ic_calculadoratroco"
            android:title="@string/menu_CalculadoraTroco" />
        <item
            android:id="@+id/nav_cadastrarProduto"
            android:icon="@drawable/ic_cadastrarproduto"
            android:title="@string/menu_CadatroProdutos" />
        <item
            android:id="@+id/nav_historicoVendas"
            android:icon="@drawable/ic_historicovendas"
            android:title="@string/menu_HistoricoVendas" />
        <item
            android:id="@+id/nav_contasPagar"
            android:icon="@drawable/ic_contaspagar"
            android:title="@string/menu_ContasPagar" />
        <item
            android:id="@+id/nav_listaClientes"
            android:icon="@drawable/ic_listaclientes"
            android:title="@string/menu_ListadeClientes" />
    </group>
    <group android:checkableBehavior="single">
        <item android:title="@string/menu" >
            <menu >
                <item
                    android:id="@+id/nav_listaFornecedor"
                    android:icon="@drawable/ic_listafornecedor"
                    android:title="@string/menu_ListaFornecedores" />
                <item
                    android:id="@+id/nav_controleEstoque"
                    android:title="@string/menu_ControleEstoque" />
                <item
                    android:id="@+id/nav_entrarContato"
                    android:title="@string/menu_EntrarContato" />
                <item
                    android:id="@+id/nav_sair"
                    android:title="@string/menu_Sair" />
            </menu>
        </item>
    </group>
</menu>