<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_caixa"
            android:checkable="false"
            android:enabled="true"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_Caixa"
            android:visible="true" />
        <item
            android:id="@+id/nav_troco"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_CalculadoraTroco" />
        <item
            android:id="@+id/nav_historicoVendas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_HistoricoVendas" />
        <item
            android:id="@+id/nav_contasPagar"
            android:title="@string/menu_ContasPagar" />
        <item
            android:id="@+id/nav_cadastroProduto"
            android:title="@string/menu_CadatroProdutos" />
        <item
            android:id="@+id/nav_listaClientes"
            android:title="@string/menu_ListadeClientes" />
        <item
            android:id="@+id/nav_Configuracao"
            android:title="@string/menu_Configuracao" />
        <item
            android:id="@+id/nav_EntreContato"
            android:title="@string/menu_EntrarContato" />
    </group>
</menu>